@@ -46,6 +46,7 @@ shopt -s expand_aliases
 source "${ECLECTIC_CORE_PATH}/core.bash" || exit 255
 source "${ECLECTIC_CORE_PATH}/output.bash" || die "Couldn't source output.bash"
 source "${ECLECTIC_CORE_PATH}/config.bash" || die "Couldn't source config.bash"
+source "${ECLECTIC_CORE_PATH}/multilib.bash" || die "Couldn't source multilib.bash"
 
 # Sneaky trick to make die in subshells work. If you don't get
 # it, don't ask...
