@@ -22,14 +22,14 @@
 list_libdirs() {
     local libdirs=() arch=$(/bin/uname -m)
     case ${arch} in
-        amd64)
+        x86_64)
             libdirs=("lib lib32 lib64")
             ;;
         *)
             libdirs=("lib")
             ;;
     esac
-    echo "${list[@]}"
+    echo "${libdirs[@]}"
 }
 
 # vim: set sw=4 et sts=4 tw=80 :
